--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
         | <a href="index.html">Home</a> |
         <a href="colours/colours.html">Colours</a> |
-        <a href="Geometry/Geometry.html">Geometry</a> |
+        <a href="geometry/geometry.html">Geometry</a> |
         <a href="cookbook/InAction.html">Cook Book</a> |
         <a href="/mystory.html">My Story</a> |
         <a href="contact.html">Contact</a> 
@@ -22,7 +22,7 @@
 <div class="space-large"></div>
 <img src="images/cw.png" class="standard-image" alt="Colour Wheel"><br>
 <div class="space-large"></div>
-<a href="colours/Colours.html" class="nav-style" ><i>Click here to learn Colours</i></a>
+<a href="colours/colours.html" class="nav-style" ><i>Click here to learn Colours</i></a>
 <div class="space-large"></div>
 <h2><i>"I think metahamrony really shines for people who</i></h2>
 <h2><i>want to make fresh modern compositional choices"</i></h2>
@@ -57,8 +57,8 @@
 <p><i>But you might want to start with cook book for inspiration</i></p>
 <h3><i>The choice ahead is yours:</i></h3>
 <div class="space-large"></div>
-<a href="colours/Colours.html" class="nav-style" ><i>Click here for <b>COLOURS</b></i></a> |
-<a href="colours/Colours.html" class="nav-style" ><i>Click here for <b>COOK BOOK</b></i></a>
+<a href="colours/colours.html" class="nav-style" ><i>Click here for <b>COLOURS</b></i></a> |
+<a href="colours/colours.html" class="nav-style" ><i>Click here for <b>COOK BOOK</b></i></a>
 <div class="space-large"></div>
   </body>
 </html>
