next update test
17.3.25

--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
         <a href="colours/colours.html">Colours</a> |
         <a href="Geometry/Geometry.html">Geometry</a> |
         <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="/mystory.html">My Story</a> |
+        <a href="mystory.html">My Story</a> |
         <a href="contact.html">Contact</a> 
     </nav>
     <div class="large"><i>LET'S CONNECT</i></div>
