--- a/mystory.html
+++ b/mystory.html
@@ -11,7 +11,7 @@
         <a href="colours/colours.html">Colours</a> |
         <a href="Geometry/Geometry.html">Geometry</a> |
         <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="/mystory.html">My Story</a> |
+        <a href="mystory.html">My Story</a> |
         <a href="contact.html">Contact</a> 
     </nav>
     <div class="large"><i>MY STORY</i></div>
@@ -133,7 +133,7 @@
     <p>Many thanks,</p>
     <p>Tom</p>
     <div class="space-large"></div>
-    <a href="/index.html" class="nav-style" >Back Home</a>
+    <a href="index.html" class="nav-style" >Back Home</a>
     <div class="space-large"></div>
   </body>
 </html>
