--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="colours/colours.html">Colours</a> |
         <a href="geometry/geometry.html">Geometry</a> |
         <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="/mystory.html">My Story</a> |
+        <a href="mystory.html">My Story</a> |
         <a href="contact.html">Contact</a> 
     </nav>
     <p><i>WELCOME TO</i></p>
