--- a/mystory.html
+++ b/mystory.html
@@ -11,8 +11,8 @@
         <a href="colours/colours.html">Colours</a> |
         <a href="Geometry/Geometry.html">Geometry</a> |
         <a href="cookbook/InAction.html">Cook Book</a> |
-        <a href="mystory.html">My Story</a> |
-        <a href="contact.html">Contact</a> 
+        <a href="metaharmony/mystory.html">My Story</a> |
+        <a href="metaharmony/Contact">Contact</a> 
     </nav>
     <div class="large"><i>MY STORY</i></div>
     <div class="space-medium"></div>
