colour pages buttons

--- a/colours/complimentary.html
+++ b/colours/complimentary.html
@@ -148,7 +148,7 @@
         <h3>Where would you like to go next?</h3>
         <div class="space-large"></div>
             <a href="functions 2.html"class="nav-style">Back to Functions 2</a> |
-            <a href="/colours/Colours.html"class="nav-style">Advanced colour pages</a> | 
+            <a href="/colours/colours.html"class="nav-style">Advanced colour pages</a> | 
             <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
             <a href="../geometry/geometry.html"class="nav-style">Check out Geometry</a>
             <div class="space-medium"></div>
