--- a/colours/primaries.html
+++ b/colours/primaries.html
@@ -51,8 +51,8 @@
             <h3>Ok so the primary colours represent the 12 notes,</h3>
             <h3>We're ready for the secondaries...</h3>
             <div class="space-large"></div>
-            <a href="Colours.html"class="nav-style">Back to Colour Home</a> |
-            <a href="Secondaries.html"class="nav-style">Continue to Secondary Colours</a>
+            <a href="colours.html"class="nav-style">Back to Colour Home</a> |
+            <a href="secondaries.html"class="nav-style">Continue to Secondary Colours</a>
             <div class="space-medium"></div>
         </body>
  </html>
