--- a/mystory.html
+++ b/mystory.html
@@ -12,7 +12,7 @@
         <a href="Geometry/Geometry.html">Geometry</a> |
         <a href="cookbook/InAction.html">Cook Book</a> |
         <a href="../mystory.html">My Story</a> |
-        <a href="../Contact">Contact</a> 
+        <a href="../contact">Contact</a> 
     </nav>
     <div class="large"><i>MY STORY</i></div>
     <div class="space-medium"></div>
