index images touch up

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <p><b>The Cook Book</b> is where we explore writing ideas with metaharmony</p>
 <p>Here's an example from 'exploring the subdominants':</i></p>
 <div class="space-medium"></div>
-<img src="/images/BinC.png" class="standard-image" alt="Colour Wheel">
+<img src="images/BinC.png" class="standard-image" alt="Colour Wheel">
 <div class="audio-player-container">
   <div class="audio-title">Using Bmaj in C</div>
   <audio controls>
-      <source src="/audioCB/Bmaj.mp3" type="audio/mpeg">
+      <source src="audioCB/Bmaj.mp3" type="audio/mpeg">
   </audio>
 </div>
 <div class="space-large"></div>
