--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h2><i>"Grasping the geometries of metaharmony</i></h2>
 <h2><i>feels like grasping music in concrete form"</i></h2>
 <div class="space-large"></div>
-<a href="geometry/geometry.html" class="nav-style" ><i>Click here to learn Geometry</i></a>
+<a href="Geometry/Geometry.html" class="nav-style" ><i>Click here to learn Geometry</i></a>
 <div class="space-large"></div>
 <p><i>The first step of metaharmony is learning the colours,</i></p>
 <p><i>But you might want to start with cook book for inspiration</i></p>
