mystory iamges clean

--- a/mystory.html
+++ b/mystory.html
@@ -19,12 +19,12 @@
     <p>I'd love to share my metaharmony story with you</p>
     <p>Let's start with a timeline:</p>
     <div class="space-medium"></div>
-    <img src="/images/full.png" class="standard-image" alt="Colour Wheel">
+    <img src="images/full.png" class="standard-image" alt="Colour Wheel">
     <div class="space-large"></div>
     <p>It seems there's 5 chapters to this journey so far:</p>
     <div class="space-medium"></div>
     <h1>Chapter 1: Grasping a dream</h1>
-    <img src="/images/chp1.png" class="standard-image" alt="Colour Wheel">
+    <img src="images/chp1.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>After finishing the harmony modules of my music degree</p>
     <p>I discovered the work of Barry Harris and I developed this sense that all harmony was physically connected</p>
@@ -37,14 +37,14 @@
     <p>the meta prism and colour wheel were complete</p>
     <div class="space-large"></div>
     <h1>Chapter 2: Recovery</h1>
-    <img src="/images/chp2.png" class="standard-image" alt="Colour Wheel">
+    <img src="images/chp2.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>During these 20 months I became unwell and took roughly a year to recover my health.</p>
     <p>With the help of my friend Charlie, we coined the term metaharmony</p>
     <p>And worked together to tidy up all the metaharmony ideas</p>
     <div class="space-large"></div>
     <h1>Chapter 3: Development</h1>
-    <img src="/images/chp3.png" class="standard-image" alt="Colour Wheel">
+    <img src="images/chp3.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p><i>What am I going to do with this? I need to share it with the world."</i> I thought.</p>
     <br>
@@ -55,7 +55,7 @@
     <p>and in this season I grew in how to harness its creative potential.</p>
     <div class="space-large"></div>
     <h1>Chapter 4: Yielding</h1>
-    <img src="/images/chp4.png" class="standard-image" alt="Colour Wheel">
+    <img src="images/chp4.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>This is a delicate moment, let me try and explain...</p>
     <div class="space-medium"></div>
@@ -100,7 +100,7 @@
     <p><i>I feel that you are that person”</i></p>
     <div class="space-large"></div>
     <h1>Chapter 5: Regrowing</h1>
-    <img src="/images/chp5.png" class="standard-image" alt="Colour Wheel">
+    <img src="images/chp5.png" class="standard-image" alt="Colour Wheel">
     <div class="space-medium"></div>
     <p>So here we are at the beginning of 2025</p>
     <p>and I am using said Laptop to rebuild metaharmony and create this website</p>
