--- a/colours/complimentary.html
+++ b/colours/complimentary.html
@@ -150,7 +150,7 @@
             <a href="functions 2.html"class="nav-style">Back to Functions 2</a> |
             <a href="/colours/colours.html"class="nav-style">Advanced colour pages</a> | 
             <a href="../cookbook/InAction.html"class="nav-style">Head to Cook Book</a> |
-            <a href="../geometry/geometry.html"class="nav-style">Check out Geometry</a>
+            <a href="../Geometry/Geometry.html"class="nav-style">Check out Geometry</a>
             <div class="space-medium"></div>
         </body>
  </html>
