geometry link fixing

--- a/Geometry/atrium.html
+++ b/Geometry/atrium.html
@@ -21,6 +21,6 @@
         <p>More coming soon</p>
         <div class="space-large"></div>
         <a href="arcades.html"class="nav-style">Back to Arcades</a> |
-            <a href="../cookbook/inaction.html"class="nav-style">To the Cook Book!</a>
+            <a href="../cookbook/InAction.html"class="nav-style">To the Cook Book!</a>
         </body>
  </html>
