--- a/Geometry/squares.html
+++ b/Geometry/squares.html
@@ -20,7 +20,7 @@
         <p>The 3 primary colours are squares</p>
         <p>More coming soon</p>
         <div class="space-large"></div>
-            <a href="geometry.html"class="nav-style">Back to Geometry</a> |
-            <a href="alphacubes.html"class="nav-style">Continue to Alpha Cubes</a>
+            <a href="Geometry.html"class="nav-style">Back to Geometry</a> |
+            <a href="Alphacubes.html"class="nav-style">Continue to Alpha Cubes</a>
         </body>
  </html>
