adding the minor dominants
and some other details

--- a/Geometry/Geometry.html
+++ b/Geometry/Geometry.html
@@ -31,11 +31,11 @@
         <h2>Step 6: The Atira</h2>
         <div class="space-large"></div>
         <a href="squares.html"class="nav-style">1. Squares</a><br><br><br>
-        <a href="alphacubes.html"class="nav-style">2. Alpha Cubes</a><br><br><br>
-        <a href="hypercubes.html"class="nav-style">3. Hypercubes</a><br><br><br>
+        <a href="Alphacubes.html"class="nav-style">2. Alpha Cubes</a><br><br><br>
+        <a href="Hypercubes.html"class="nav-style">3. Hypercubes</a><br><br><br>
         <a href="metaprism.html"class="nav-style">4. Metaprism</a><br><br><br>
         <a href="arcades.html"class="nav-style">5. arcades</a><br><br><br>
-        <a href="Atrium.html"class="nav-style">6. Atria</a><br><br><br>
+        <a href="atrium.html"class="nav-style">6. Atria</a><br><br><br>
         <div class="space-large"></div>
         </body>
  </html>
