--- a/colours/secondaries.html
+++ b/colours/secondaries.html
@@ -66,7 +66,7 @@
         <h1>Then Congratulations!</h1>
         <p>You've completed level one of metaharmony:</p>
         <p><i>"Primary and secondary colours represent notes and chords related by minor 3rds"</i></p>
-        <img src="../images/CW.png" class="standard-image" alt="Colour Wheel">
+        <img src="../images/cw.png" class="standard-image" alt="Colour Wheel">
         <div class="space-large"></div>
         <p>You now understand the 6 colours of the metaharmony colour wheel</p>
         <p>Once you've digested this you're ready to move onto the <b>why</b> of the colours...</p>
