--- a/cookbook/Exploringdominants/Exploringdominants.html
+++ b/cookbook/Exploringdominants/Exploringdominants.html
@@ -71,9 +71,98 @@
       </audio>
     </div>
     <div class="space-large"></div>
-    <p>MINOR DOMINANTS COMING SOON</p>
+    <div class="large"><i>What about the minor dominants?</i></div>
     <div class="space-large"></div>
-    <p>What about all the subdominants?</p>
+    <p>I love these!</p>
+    <p>And apart from the minor 5, they're never really used</p>
+    <p>Let's hear some ideas I came up with using them:</p>
+    <div class="space-large"></div>
+    <h1>The minor 5</h1>
+    <p>I love the slight darkness this chord has</p>
+    <p>It makes the tonic major sound just that little bit more bright and delightful in contrast</p>
+    <p>Below we can hear the movement as chords and also a riff</p>
+    <div class="audio-player-container">
+      <div class="audio-title">The minor 5</div>
+      <audio controls>
+          <source src="../../audioCB/m5.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <br>
+    <div class="audio-player-container">
+      <div class="audio-title">Minor 5 riff</div>
+      <audio controls>
+          <source src="../../audioCB/m5.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <p>I made this ruff in 7/8 time signature going between F^7 and Cm11</p>
+    <div class="space-large"></div>
+    <h1>Chord iii</h1>
+    <p>A controversial one!</p>
+    <p>Some say that chord iii has tonic function</p>
+    <p>But I disagree for two reasons</p>
+    <p>firstly its orange here and orange chords are dominant to the green F major</p>
+    <p>secondly it has the leading tone of F major in it (E natural)</p>
+    <p>Which pulls back up to F</p>
+    <p>Let's first hear the cadence of iii resolving to I:</p>
+    <div class="audio-player-container">
+      <div class="audio-title">Chord iii</div>
+      <audio controls>
+          <source src="../../audioCB/iii.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <br>
+    <p>Now let's hear it in a progression:</p>
+    <br>
+    <div class="audio-player-container">
+      <div class="audio-title">Chord iii progression</div>
+      <audio controls>
+          <source src="../../audioCB/iiiriff.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <div class="space-large"></div>
+    <h1>The minor backdoor</h1>
+    <p>love this one</p>
+    <p>Let's first hear it in a progression:</p>
+    <div class="audio-player-container">
+      <div class="audio-title">Backdoor dominant</div>
+      <audio controls>
+          <source src="../../audioCB/mBDriff.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <br>
+    <div class="audio-player-container">
+      <div class="audio-title">BD dominant riff</div>
+      <audio controls>
+          <source src="../../audioCB/minBD.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <div class="space-large"></div>
+    <h1>The minor tritone sub</h1>
+    <p>This movement is iconic in the modern jazz world</p>
+    <p>The root and 5th of F^7 go up a semitone</p>
+    <p>and the 3rd and 7th remain in place</p>
+    <p>This results in a minor 7 chord a semitone above the root</p>
+    <p>Let's first hear it in a progression:</p>
+    <div class="audio-player-container">
+      <div class="audio-title">Minor tritone</div>
+      <audio controls>
+          <source src="../../audioCB/mTT.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <br>
+    <p>And then in a riff:</p>
+    <br>
+    <div class="audio-player-container">
+      <div class="audio-title">Minor tritone riff</div>
+      <audio controls>
+          <source src="../../audioCB/mTTriff.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+    <div class="space-large"></div>
+    <p>So that's me sharing a little exploration of each of the 8 dominants</p>
+    <p>Theres still so much more to do with each of them</p>
+    <p>and so many ways to express with them</p>
+    <p>But what about all the subdominants?</p>
     <h3>Let's explore them in a different way:</h3>
     <div class="space-medium"></div>
     <a href="../InAction.html"class="nav-style">Back to Cook Book</a> |
